updated -- fixed home page overlap with navbar

--- a/project/static/css/home.css
+++ b/project/static/css/home.css
@@ -1,88 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    overflow: hidden;
-    font-family: 'Inter', sans-serif;
-  }
-  
-  .bg-image {
-    position: relative;
-    background-image: url("../img/home_image.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
-    width: 100vw;
+  position: relative;
+  background-image: url("../img/home_image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;    
-  }
-  
-  .bg-image::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, rgba(24, 42, 27, 0) 0%, #07110A 100%);
-    z-index: 1;
-  }
-  
-  .content {
-    width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;    
-    
-    text-align: center;
-    color: white;
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(24, 42, 27, 0) 0%, #07110a 100%);
+  z-index: 1;
+}
 
-    /* Places content above linear backdrop  */
-    z-index: 2;
-  }
-  
-  .content h1 {
-    font-size: 4rem;
-    margin-top: 0;
-    margin-bottom: 0;
-   }
+.content {
+  width: 70%;
 
-   .content p {
-    font-size: 1.3rem;
-    margin-bottom: 3rem;
-   }
-  
-   .try-it-button {
-    font-size: 20px;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #D6EB56;
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 25px; /* Make the edges rounder */
-    margin-top: none;
-    transition: background-color 0.3s; /* Add transition for smooth hover effect */
-  }
-  
-  .try-it-button:hover {
-    background-color: #274126; /* Change to a darker green on hover */
-  }
-  
-  .try-it-button .arrow {
-    margin-left: 5px;
-  }
-  
-  .nav-link-home {
-    text-decoration: underline !important;
-  }
-  
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
+  color: white;
+
+  /* Places content above linear backdrop  */
+  z-index: 2;
+}
+
+.content h1 {
+  font-size: 4rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.content p {
+  font-size: 1.3rem;
+  margin-bottom: 3rem;
+}
+
+.try-it-button {
+  font-size: 20px;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #d6eb56;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 25px; /* Make the edges rounder */
+  margin-top: none;
+  transition: background-color 0.3s; /* Add transition for smooth hover effect */
+}
+
+.try-it-button:hover {
+  background-color: rgba(
+    214,
+    235,
+    86,
+    0.5
+  ); /* Change to a darker green on hover */
+}
+
+.try-it-button .arrow {
+  margin-left: 5px;
+}
+
+.nav-link-home {
+  text-decoration: underline !important;
+}
