--- a/project/static/css/navbar.css
+++ b/project/static/css/navbar.css
@@ -45,7 +45,7 @@
   }
   
   .navbar-links ul li a:hover {
-    color: #D6EB56BF;
+    color: #dad7cd;
   }
   
   #logo {
